--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_archive.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_archive.scss
@@ -85,7 +85,7 @@
         text-align: left;
     }
     .subheading {
-        @include archive-subhading-font;
+        @include archive-subheading-font;
         text-align: left;
     }
 }
@@ -142,6 +142,9 @@
     border: 1.25px solid $black;
     border-radius: 5px;
     box-shadow: 2px 2px 0;
+    &:hover {
+        background: $hoverGrey;
+    }
     &:disabled {
         display: none;
     }
