--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_footer.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_footer.scss
@@ -31,7 +31,7 @@
         border-radius: 4px;
         display: inline-block;
         &:hover {
-            background: #D9D9D9;
+            background: $yellow;
         }
     }
     @include media-breakpoint-down(md) {
