--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
@@ -1,10 +1,10 @@
-//.over1340 {display: block;}
-//.under1340 {display: none;}
-//
-//@media (max-width: 1340px) {
-//    .over1340 {display: none;}
-//    .under1340 {display: block;}
-//}
+.over1340 {display: block;}
+.under1340 {display: none;}
+
+@media (max-width: 1340px) {
+    .over1340 {display: none;}
+    .under1340 {display: block;}
+}
 
 a.home-logo-rel-wrapper {
     position: relative;
@@ -17,7 +17,9 @@ a.home-logo-rel-wrapper {
         text-align: center;
         position: absolute;
         left: 253px;;
-
+        @media (max-width: 1340px) {
+            left: 123px;
+        }
     }
     span {
       display: inline-block;
@@ -74,6 +76,9 @@ a.home-logo-rel-wrapper {
     img.home-logo {
         width: 440px;
     }
+    @media (max-width: 960px) {
+        top: -60px;
+    }
 }
 //overwriting post styles from archive.scss
 .home {
@@ -109,7 +114,7 @@ a.home-logo-rel-wrapper {
         @include home-archive-title-font;
     }
     .subheading {
-        @include home-archive-subhading-font;
+        @include home-archive-subheading-font;
     }
 }
 
@@ -226,11 +231,14 @@ a.home-logo-rel-wrapper {
         right: -39px;
         top: -23px;
         transition: 0.2s all;
-        img.see-all-circle {
+        .see-all-circle {
             width: 75px;
         }
         &:hover {
             transform: rotate(20deg);
+            .filledCircle {
+                fill: $hoverGrey;
+            }
         }
     }
     span.stars {
