--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_post-headings.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_post-headings.scss
@@ -48,6 +48,7 @@ figcaption {
     margin-bottom: 26px;
     position: relative;
     left: 26px;
+    width: 90%;
     p {
         margin: 0;
     }
