--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_archive.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_archive.scss
@@ -90,6 +90,17 @@
     }
 }
 
+.hoveredArchive {
+    color: $medGrey;
+}
+.post-title-subtitle {
+    &:hover {
+        h2, h3, .subheading, .entry-title {
+            color: $medGrey;
+        }
+    }
+}
+
     span.taxonomy-thumb {
         display: block;
         position: relative;
