--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_post-headings.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_post-headings.scss
@@ -58,9 +58,16 @@ figcaption {
         top: -7px;
     }
     @include media-breakpoint-down(sm) {
-        width: 90%;
+        figcaption {
+            .caption-arrow {
+                position: relative;
+            }
+            width: auto;
+            left: auto;
+        }
     }
 }
+
 
 
 .author-date-sep {
