--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_regular-content.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_regular-content.scss
@@ -1,6 +1,9 @@
 .post-body a {
     color: $ryersonBlue;
     text-decoration: underline;
+    &:hover {
+        text-decoration: none;
+    }
 }
 .post-body cite {
     font-style: normal;
@@ -10,6 +13,12 @@
 }
 .sidebar-citations {
 //    @include flex-height;
+    a {
+        text-decoration: underline;
+        &:hover {
+            text-decoration: none;
+        }
+    }
 }
 cite.aside {
     font-style: normal;
