--- a/wp-content/themes/rysersonmag-child/css/child-theme.css
+++ b/wp-content/themes/rysersonmag-child/css/child-theme.css
@@ -15046,8 +15046,8 @@ body i, body em {
 }
 
 .sec-pad {
-  padding-top: 55px;
-  padding-bottom: 55px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .sec-pad-lg {
@@ -15291,6 +15291,11 @@ body i, body em {
   width: 100%;
   height: 68px;
 }
+@media (max-width: 767.98px) {
+  .false-header-height {
+    height: 80px;
+  }
+}
 
 header.not-homepg {
   position: fixed;
@@ -15301,6 +15306,11 @@ header.not-homepg {
 }
 header.not-homepg.neg-margin {
   margin-top: -68px;
+}
+@media (max-width: 767.98px) {
+  header.not-homepg.neg-margin {
+    margin-top: -80px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -15514,8 +15524,8 @@ input[type=search]:-webkit-autofill::first-line b, input[type=search]:-webkit-au
 
 .drawer-tags-row a {
   display: inline;
-  font-size: 2.3vw;
-  line-height: 3.8vw;
+  font-size: 2.2vw;
+  line-height: 3.6vw;
   font-family: "Lynon Reg", sans-serif;
   color: #fff;
   white-space: nowrap;
@@ -15777,7 +15787,7 @@ input[type=search]:-webkit-autofill::first-line b, input[type=search]:-webkit-au
   content: "";
   background-color: rgba(0, 218, 43, 0.7);
   position: absolute;
-  bottom: -8px;
+  bottom: -12px;
 }
 .mobile-drawer-cat-list li a.blue::before {
   height: 11px;
@@ -15785,7 +15795,7 @@ input[type=search]:-webkit-autofill::first-line b, input[type=search]:-webkit-au
   content: "";
   background-color: rgba(4, 210, 255, 0.7);
   position: absolute;
-  bottom: -8px;
+  bottom: -12px;
 }
 .mobile-drawer-cat-list li a.orange::before {
   height: 11px;
@@ -15793,7 +15803,7 @@ input[type=search]:-webkit-autofill::first-line b, input[type=search]:-webkit-au
   content: "";
   background-color: rgba(255, 137, 29, 0.7);
   position: absolute;
-  bottom: -8px;
+  bottom: -12px;
 }
 .mobile-drawer-cat-list li a.yellow::before {
   height: 11px;
@@ -15801,7 +15811,7 @@ input[type=search]:-webkit-autofill::first-line b, input[type=search]:-webkit-au
   content: "";
   background-color: rgba(252, 246, 97, 0.7);
   position: absolute;
-  bottom: -8px;
+  bottom: -12px;
 }
 .mobile-drawer-cat-list li a:hover {
   text-decoration: none;
@@ -15953,8 +15963,12 @@ figcaption .caption-arrow {
   top: -7px;
 }
 @media (max-width: 767.98px) {
-  figcaption {
-    width: 90%;
+  figcaption figcaption {
+    width: auto;
+    left: auto;
+  }
+  figcaption figcaption .caption-arrow {
+    position: relative;
   }
 }
 
@@ -16132,12 +16146,22 @@ figcaption .caption-arrow {
   color: #004C9B;
   text-decoration: underline;
 }
+.post-body a:hover {
+  text-decoration: none;
+}
 
 .post-body cite {
   font-style: normal;
   color: #234586;
   font-size: 80%;
   font-family: "Lynon Bold", sans-serif;
+}
+
+.sidebar-citations a {
+  text-decoration: underline;
+}
+.sidebar-citations a:hover {
+  text-decoration: none;
 }
 
 cite.aside {
@@ -16792,6 +16816,14 @@ p.form-submit {
   font-family: "Lynon Bold", sans-serif;
 }
 
+.hoveredArchive {
+  color: #4c4c4c;
+}
+
+.post-title-subtitle:hover h2, .post-title-subtitle:hover h3, .post-title-subtitle:hover .subheading, .post-title-subtitle:hover .entry-title {
+  color: #4c4c4c;
+}
+
 span.taxonomy-thumb {
   display: block;
   position: relative;
@@ -16953,30 +16985,31 @@ span.taxonomy-thumb.hovered img {
     display: block;
   }
 }
-a.home-logo-rel-wrapper {
+.home-logo-rel-wrapper {
   position: relative;
   display: block;
-  height: 420px;
 }
-a.home-logo-rel-wrapper p {
+.home-logo-rel-wrapper a {
   font-size: 14px;
   line-height: 18px;
   font-family: "Suisse Reg", sans-serif;
   text-align: center;
   position: absolute;
-  left: 253px;
+  left: 204px;
+  top: 286px;
 }
 @media (max-width: 1340px) {
-  a.home-logo-rel-wrapper p {
-    left: 123px;
+  .home-logo-rel-wrapper a {
+    left: 73px;
+    top: 150px;
   }
 }
-a.home-logo-rel-wrapper span {
+.home-logo-rel-wrapper span {
   display: inline-block;
   position: relative;
   border-bottom: 1px solid #000;
 }
-a.home-logo-rel-wrapper span::after {
+.home-logo-rel-wrapper span::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -16989,10 +17022,10 @@ a.home-logo-rel-wrapper span::after {
   transition: transform 0.25s ease-out;
   transition-delay: 150ms;
 }
-a.home-logo-rel-wrapper:hover span {
+.home-logo-rel-wrapper:hover span {
   border-bottom: none;
 }
-a.home-logo-rel-wrapper:hover span::after {
+.home-logo-rel-wrapper:hover span::after {
   transform: scaleX(1);
   transform-origin: bottom left;
 }
@@ -17075,7 +17108,7 @@ a.home-logo-rel-wrapper:hover span::after {
 }
 
 .home-people {
-  margin-top: 125px;
+  margin-top: 80px;
 }
 @media (max-width: 767.98px) {
   .home-people {
@@ -17233,20 +17266,16 @@ a.home-logo-rel-wrapper:hover span::after {
 }
 @media (max-width: 767.98px) {
   .featured-cat-heading::before {
-    height: 17px;
+    height: 15px;
     bottom: -1px;
   }
 }
 @media (max-width: 767.98px) {
   .featured-cat-heading {
-    font-size: 51px;
-    line-height: 49px;
+    font-size: 46px;
+    line-height: 46px;
     letter-spacing: -2px;
     margin-bottom: 40px;
-    background-position: 0 45px;
-    background-size: 100% 23px;
-    padding-bottom: 0px;
-    display: inline;
   }
 }
 .featured-cat-heading a.see-all {
@@ -17260,6 +17289,12 @@ a.home-logo-rel-wrapper:hover span::after {
   right: -39px;
   top: -23px;
   transition: 0.2s all;
+}
+@media (max-width: 767.98px) {
+  .featured-cat-heading a.see-all {
+    position: relative;
+    top: -5px;
+  }
 }
 .featured-cat-heading a.see-all .see-all-circle {
   width: 75px;
@@ -17301,9 +17336,9 @@ a.home-logo-rel-wrapper:hover span::after {
 }
 
 @media (max-width: 767.98px) {
-  a.see-all-mobile {
-    position: relative;
-    width: 100px;
+  .see-all-circle {
+    float: right;
+    width: 70px;
   }
 
   .featured-cat-heading-mobile-wrap {
@@ -17429,6 +17464,7 @@ a.home-logo-rel-wrapper:hover span::after {
 .past-issues {
   background: #e8e8e8;
   color: #000;
+  margin-top: 30px;
 }
 @media (min-width: 576px) {
   .past-issues {
@@ -17436,7 +17472,7 @@ a.home-logo-rel-wrapper:hover span::after {
   }
 }
 .past-issues .past-issues-heading {
-  border-bottom: 2px dotted #000;
+  border-bottom: 4px solid #000;
   display: flex;
   justify-content: space-between;
 }
@@ -17450,6 +17486,9 @@ a.home-logo-rel-wrapper:hover span::after {
 .past-issues .past-issue img {
   width: 255px;
   margin: 0 auto 40px auto;
+}
+.past-issues .past-issue h2 {
+  font-family: "Lynon Bold", sans-serif;
 }
 .past-issues .dotted-heading {
   font-family: "Suisse Bold", sans-serif;
@@ -17648,6 +17687,11 @@ h2.contact-masthead-title {
     line-height: 20px;
   }
 }
+@media (min-width: 576px) {
+  .main-footer.extraFooterPadding {
+    margin-top: 50px;
+  }
+}
 .main-footer img.white-ryerson-logo {
   margin-bottom: 27px;
   max-width: 135px;
@@ -17717,7 +17761,7 @@ h2.contact-masthead-title {
 }
 
 .footer-bottom-inner {
-  border-top: 2px dotted #fff;
+  border-top: 1.25px solid #fff;
   margin-top: 45px;
 }
 .footer-bottom-inner ul {
