--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_current-issue-page.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_current-issue-page.scss
@@ -57,11 +57,12 @@
 .past-issues {
     background: $lightGrey;
     color: $black; 
+    margin-top: 30px;
     @include media-breakpoint-up(sm) {
         padding-bottom: 100px;
     }
     .past-issues-heading {
-        border-bottom: 2px dotted $black;
+        border-bottom: 4px solid $black;
         display: flex;
         justify-content: space-between;
     }
@@ -74,6 +75,9 @@
         img {
             width: 255px;
             margin: 0 auto 40px auto;
+        }
+        h2 {
+            font-family: 'Lynon Bold', sans-serif;
         }
     }
     .dotted-heading {
