--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_header-scroll-intent.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_header-scroll-intent.scss
@@ -2,6 +2,9 @@
     display: block;
     width: 100%;
     height: 68px;
+    @include media-breakpoint-down(sm) {
+        height: 80px;
+    }
 }
 header.not-homepg {
     position: fixed;
@@ -11,5 +14,8 @@ header.not-homepg {
     transition: 0.2s all;
     &.neg-margin {
         margin-top: -68px;
+        @include media-breakpoint-down(sm) {
+            margin-top: -80px;
+        }
     }
 }
