--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
@@ -6,19 +6,21 @@
     .under1340 {display: block;}
 }
 
-a.home-logo-rel-wrapper {
+.home-logo-rel-wrapper {
     position: relative;
     display: block;
-    height: 420px;
-    p {
+//    height: 420px;
+    a {
         font-size: 14px;
         line-height: 18px;
         font-family: 'Suisse Reg', sans-serif;
         text-align: center;
         position: absolute;
-        left: 253px;;
+        left: 204px;
+        top: 286px;
         @media (max-width: 1340px) {
-            left: 123px;
+            left: 73px;
+            top: 150px;
         }
     }
     span {
@@ -119,7 +121,7 @@ a.home-logo-rel-wrapper {
 }
 
 .home-people {
-    margin-top: 125px;
+    margin-top: 80px;
     @include media-breakpoint-down(sm) {
         margin-top: 25px;
     }
@@ -208,19 +210,15 @@ a.home-logo-rel-wrapper {
         position: absolute;
         bottom: -12px;
         @include media-breakpoint-down(sm) {
-            height: 17px;
+            height: 15px;
             bottom: -1px;
         }
     }
     @include media-breakpoint-down(sm) { 
-        font-size: 51px;
-        line-height: 49px;
+        font-size: 46px;
+        line-height: 46px;
         letter-spacing: -2px;
         margin-bottom: 40px;
-        background-position: 0 45px;
-        background-size: 100% 23px;
-        padding-bottom: 0px;
-        display: inline;
     }
     a.see-all {
         @include author-font;
@@ -231,6 +229,10 @@ a.home-logo-rel-wrapper {
         right: -39px;
         top: -23px;
         transition: 0.2s all;
+        @include media-breakpoint-down(sm) { 
+            position: relative;
+            top: -5px;
+        }
         .see-all-circle {
             width: 75px;
         }
@@ -276,9 +278,9 @@ a.home-logo-rel-wrapper {
     }
 }
 @include media-breakpoint-down(sm) {
-    a.see-all-mobile {
-        position: relative;
-        width: 100px;
+    .see-all-circle {
+        float: right;
+        width: 70px;
     }
     .featured-cat-heading-mobile-wrap {
         margin-bottom: 45px;
