--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_current-issue-page.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_current-issue-page.scss
@@ -31,6 +31,7 @@
 
 .read-about-tags-label {
     margin-right: 18px;
+    font-family: 'Suisse Bold', sans-serif;
 }
 
 .current-issue-articles {
@@ -107,8 +108,8 @@
 }
 
 .mag-pagination-next {
-    font-size: 28px;
-    line-height: 36px;
+    font-size: 18px;
+    line-height: 26px;
     font-family: 'Suisse Bold', sans-serif;
     text-transform: lowercase;
     &:hover {
