--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_footer.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_footer.scss
@@ -31,10 +31,11 @@
         background: $white;
         color: $black;
         text-decoration: none;
-        padding: 7px 15px;
+        padding: 13px 28px;
         text-align: center;
         border-radius: 4px;
         display: inline-block;
+        margin-top: 10px;
         &:hover {
             background: $yellow;
         }
