--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_header-mobile.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_header-mobile.scss
@@ -15,4 +15,7 @@
     background: 0 0;
     border: none;
     box-shadow: none;
+    @include media-breakpoint-down(sm) {
+        right: -5px;
+    }
 }
