--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
@@ -155,7 +155,6 @@
                 border-left: none;
             }
         }
-
         a {
             text-decoration: none;
             display: block;
@@ -181,109 +180,51 @@
         .pick {
             width: 100%;
             float: left;
-            border-bottom: 1.5px solid #D9D9D9;
+            border-bottom: 1.5px solid $black;
             padding-bottom: 18px;
             margin-bottom: 18px;
-        }
-    }
-}
-
-
-.featured-cat-heading {
-    @include archive-term-font;
-//    display: inline-block;
-//    background-image: none;
-//    background-repeat: no-repeat;
-//    background-position: 0 70px;
-//    background-size: 100% 30px;
-//    padding-bottom: 30px;
-//    position: relative;
-//    left: 0;
-    margin-bottom: 55px;
-    display: inline-block;
-    position: relative;
-    &::before {
-        height: 26px;
-        width: 100%;
-        content: "";
-        background-color: rgba(196, 196, 196, 0.7);
-        position: absolute;
-        bottom: -12px;
-        @include media-breakpoint-down(sm) {
-            height: 15px;
-            bottom: -1px;
-        }
-    }
-    @include media-breakpoint-down(sm) { 
-        font-size: 46px;
-        line-height: 46px;
-        letter-spacing: -2px;
-        margin-bottom: 40px;
-    }
-    a.see-all {
-        @include author-font;
-        line-height: 20px;
-        font-family: "Suisse Reg",sans-serif;
-        font-size: 18px;
-        position: absolute;
-        right: -39px;
-        top: -23px;
-        transition: 0.2s all;
-        @include media-breakpoint-down(sm) { 
-            position: relative;
-            top: -5px;
-        }
-        .see-all-circle {
-            width: 75px;
-        }
-        &:hover {
-            transform: rotate(20deg);
-            .filledCircle {
-                fill: $hoverGrey;
+            &:nth-child(3) {
+                border-bottom: none;
             }
         }
     }
-    span.stars {
-        position: absolute;
-        display: block;
-        right: -49px;
-        top: 38px;
-        width: 64px;
-        height: 64px;
-        display: block;
-        @include media-breakpoint-down(sm) {
-            display: none;
-        }
-        img {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            display: block;
-        }
-    }
-    &.green {
-        &::before {
-            background-color: rgba(0, 218, 43, 0.7);
-        }
-    }
-    &.blue {
-        &::before {
-            background-color: rgba(4, 210, 255, 0.7);
-        }
-    }
-    &.orange {
-        &::before {
-            background-color: rgba(255, 137, 29, 0.7);
-        }
+}
+
+
+.featured-cat-heading-wrap {
+    position: relative;
+    @include media-breakpoint-down(sm) {
+        margin-left: 15px;
+        margin-right: 15px;
     }
 }
-@include media-breakpoint-down(sm) {
+.featured-cat-heading {
+    @include archive-term-font;
+    margin-bottom: 50px;
+}
+a.see-all {
+    position: absolute;
+    top: -20px;
+    right: -47px;
+    transition: 0.2s all;
     .see-all-circle {
-        float: right;
-        width: 70px;
+        width: 75px;
     }
-    .featured-cat-heading-mobile-wrap {
-        margin-bottom: 45px;
+    &:hover {
+        transform: rotate(20deg);
+        .filledCircle {
+            fill: $hoverGrey;
+        }
+    }
+    @include media-breakpoint-down(sm) {
+        &.see-all-ri {
+            right: 0;
+        }
+        right: -39px;
+        top: -19px;
+        .see-all-circle {
+            width: 60px;
+        }
     }
 }
 
@@ -328,7 +269,13 @@
         .single-archive-post-wrap {
             padding-bottom: 25px;
             margin-bottom: 25px;
-            border-bottom: 1.5px solid #D9D9D9;
+            border-bottom: 1.5px solid $black;
+        }
+        .no-bottom-border-mobile {
+            .single-archive-post-wrap {
+                border-bottom: none;
+                padding-bottom: 0;
+            }
         }
     }
     .home-editors-picks {
