--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_author.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_author.scss
@@ -23,18 +23,11 @@
         margin-right: 8px;
     }
     display: inline-block;
-    i {
+    svg {
         float: left;
         display: block;
         margin-right:5px;
-        color: $black;
-        width: 24px;
-        height: 24px;
-        border-radius: 100%;
         display: block;
-        background: $lightGrey;
-        text-align: center;
-        line-height: 24px;
     }
 //    img {
 //        float: left;
