--- a/wp-content/themes/rysersonmag-child/css/child-theme.css
+++ b/wp-content/themes/rysersonmag-child/css/child-theme.css
@@ -15564,7 +15564,6 @@ input[type=search]:-webkit-autofill::first-line b, input[type=search]:-webkit-au
 }
 
 .drawer-footer-inner {
-  border-top: 2px dotted #fff;
   height: 80px;
 }
 .drawer-footer-inner ul {
@@ -16146,6 +16145,35 @@ figcaption .caption-arrow {
     margin-top: 55px;
   }
 }
+.post-body h1, .post-body h2 {
+  font-size: 56px !important;
+  line-height: 72px !important;
+}
+.post-body h1 strong, .post-body h2 strong {
+  font-family: "Suisse Bold", sans-serif;
+}
+.post-body h3 {
+  font-size: 32px !important;
+  line-height: 40px !important;
+}
+.post-body h3 strong {
+  font-family: "Suisse Bold", sans-serif;
+}
+.post-body h4 {
+  font-size: 24px !important;
+  line-height: 28px !important;
+}
+.post-body h4 strong {
+  font-family: "Suisse Bold", sans-serif;
+}
+.post-body h5, .post-body h6 {
+  font-size: 20px !important;
+  line-height: 30px !important;
+}
+.post-body h5 strong, .post-body h6 strong {
+  font-family: "Suisse Bold", sans-serif;
+}
+
 .post-body a {
   color: #004C9B;
   text-decoration: underline;
@@ -16322,6 +16350,12 @@ blockquote {
 }
 .dyk-content p {
   margin: 0;
+}
+.dyk-content a {
+  text-decoration: underline;
+}
+.dyk-content a:hover {
+  text-decoration: none;
 }
 
 @media (max-width: 767.98px) {
@@ -17095,6 +17129,12 @@ span.taxonomy-thumb.hovered img {
   margin-bottom: 0;
 }
 
+@media (min-width: 768px) {
+  .homeFeatOnlyPost {
+    display: block;
+    width: 85%;
+  }
+}
 .featured-post-headings h2.entry-title, .featured-post-headings h3.entry-title {
   font-size: 40px;
   line-height: 48px;
@@ -17560,6 +17600,26 @@ a.see-all:hover .filledCircle {
   font-size: 16px;
   line-height: 32px;
   font-family: "Suisse Reg", sans-serif;
+  margin-bottom: 4px;
+}
+.search-results-page p {
+  font-size: 26px;
+  line-height: 32px;
+  font-family: "Lynon Reg", sans-serif;
+  margin-bottom: 60px;
+}
+.search-results-page p strong {
+  font-family: "Lynon Bold", sans-serif;
+}
+@media (max-width: 767.98px) {
+  .search-results-page p {
+    margin-bottom: 35px;
+  }
+}
+.search-results-page #backToSearch {
+  font-size: 16px;
+  line-height: 20px;
+  font-family: "Suisse Reg", sans-serif;
 }
 
 .search-title {
@@ -17568,6 +17628,7 @@ a.see-all:hover .filledCircle {
   letter-spacing: -4px;
   font-family: "Suisse Bold", sans-serif;
   text-transform: lowercase;
+  margin-bottom: 60px;
 }
 @media (max-width: 991.98px) {
   .search-title {
@@ -17616,9 +17677,11 @@ a.see-all:hover .filledCircle {
 .search-title::before {
   content: none;
 }
-
-.no-results-search {
-  height: calc(100vh - 348px);
+@media (max-width: 767.98px) {
+  .search-title {
+    margin-bottom: 35px;
+    display: block;
+  }
 }
 
 @media (max-width: 767.98px) {
@@ -17737,10 +17800,6 @@ h2.contact-masthead-title {
   letter-spacing: -4px;
   font-family: "Suisse Bold", sans-serif;
   text-transform: lowercase;
-  font-size: 72px;
-  line-height: 72px;
-  display: inline-block;
-  position: relative;
 }
 @media (max-width: 991.98px) {
   #error-404-wrapper h1.page-title {
@@ -17785,20 +17844,6 @@ h2.contact-masthead-title {
 }
 #error-404-wrapper h1.page-title.yellow span::before {
   background-color: rgba(252, 246, 97, 0.7);
-}
-#error-404-wrapper h1.page-title::before {
-  height: 26px;
-  width: 100%;
-  content: "";
-  background-color: rgba(196, 196, 196, 0.7);
-  position: absolute;
-  bottom: -12px;
-}
-@media (max-width: 767.98px) {
-  #error-404-wrapper h1.page-title::before {
-    height: 17px;
-    bottom: 2px;
-  }
 }
 #error-404-wrapper .four04 {
   font-family: "Suisse Bold", sans-serif;
@@ -18104,6 +18149,18 @@ h2.contact-masthead-title {
 @media (max-width: 767.98px) {
   .main-footer-mob .address {
     margin-top: 12px;
+  }
+}
+@media only screen and (max-width: 1366px) and (max-height: 768px) {
+  .drawer-tags-row a {
+    font-size: 2vw;
+    line-height: 2.5vw;
+  }
+}
+@media only screen and (max-width: 1280px) and (max-height: 800px) {
+  .drawer-tags-row a {
+    font-size: 2vw;
+    line-height: 2.5vw;
   }
 }
 
