--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_drawer.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_drawer.scss
@@ -152,7 +152,7 @@ input[type="search"]:-webkit-autofill::first-line {
 }
 
 .drawer-footer-inner {
-    border-top: 2px dotted $white;
+//    border-top: 1.25px solid $white;
     height: 80px;
     ul {
         list-style-type: none;
