--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_dyk.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_dyk.scss
@@ -28,6 +28,12 @@
     p {
         margin: 0;
     }
+    a {
+        text-decoration: underline;
+        &:hover {
+            text-decoration: none;
+        }
+    }
 }
 
 
