--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_search-results-page.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_search-results-page.scss
@@ -4,17 +4,36 @@
             font-size: 16px;
             line-height: 32px;
             font-family: 'Suisse Reg', sans-serif;
+            margin-bottom: 4px;
         }
+    }
+    p {
+        font-size: 26px;
+        line-height: 32px;
+        font-family: 'Lynon Reg', sans-serif;
+        margin-bottom: 60px;
+        strong {
+            font-family: 'Lynon Bold', sans-serif;
+        }
+        @include media-breakpoint-down(sm) {
+            margin-bottom: 35px;
+        }
+    }
+    #backToSearch {
+        font-size: 16px;
+        line-height: 20px;
+        font-family: 'Suisse Reg', sans-serif;
     }
 }
 
 .search-title {
     @include archive-term-font;
+    margin-bottom: 60px;
     &::before {
         content:none;
     }
-}
-
-.no-results-search {
-    height: calc(100vh - 348px);
+    @include media-breakpoint-down(sm) {
+        margin-bottom: 35px;
+        display: block;
+    }
 }
