--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_regular-content.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_regular-content.scss
@@ -1,3 +1,34 @@
+.post-body {
+    h1, h2 {
+        font-size: 56px !important;
+        line-height: 72px !important;
+        strong {
+            font-family: 'Suisse Bold', sans-serif;
+        }
+    }
+    h3 {
+        font-size: 32px !important;
+        line-height: 40px !important;
+        strong {
+            font-family: 'Suisse Bold', sans-serif;
+        }
+    }
+    h4 {
+        font-size: 24px !important;
+        line-height: 28px !important;
+        strong {
+            font-family: 'Suisse Bold', sans-serif;
+        }
+    }
+    h5, h6 {
+        font-size: 20px !important;
+        line-height: 30px !important;
+        strong {
+            font-family: 'Suisse Bold', sans-serif;
+        }
+    }
+}
+
 .post-body a {
     color: $ryersonBlue;
     text-decoration: underline;
